tests/baselines/reference/exportAssignmentWithExportModifier.errors.txt
==== tests/cases/compiler/exportAssignmentWithExportModifier.ts (2 errors) ====
    var x;
    export export = x;
    ~~~~~~
!!! error TS1120: An export assignment cannot have modifiers.
    ~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.